...
        Text(text)
        LazyColumn(
            contentPadding = PaddingValues(horizontal = 16.dp, vertical = 8.dp),
            verticalArrangement = Arrangement.spacedBy(4.dp),
            modifier = Modifier.semantics {
                contentDescription = "contactsListContentDesc"
                testTag = "contactsListTestTag"
            }
        ) {
            items(contactItems) { contact -> ContactItem(contact) }
        }
    }
}
...
